# lemon-core

./: .gitignore  LICENSE  README.md  justfile  rust-toolchain.toml
apps/: Cargo.toml
easy-fs/: Cargo.toml  justfile
easy-fs-fuse/: Cargo.toml  justfile
easy-fs-fuse/src/: main.rs
easy-fs-tool/: Cargo.toml  justfile
easy-fs-tool/src/: block_file.rs  main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  config.rs  efs.rs  layout.rs  lib.rs  vfs.rs
kernel/: .gitignore  Cargo.toml  justfile
kernel/src/: console.rs  lang_items.rs  linker-k210.ld  logging.rs  main.rs  sbi.rs  test.rs  timer.rs
kernel/src/boards/: k210.rs  qemu.rs
kernel/src/drivers/: mod.rs  plic.rs
kernel/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
kernel/src/drivers/bus/: mod.rs  virtio.rs
kernel/src/drivers/chardev/: mod.rs  ns16550a.rs
kernel/src/drivers/gpu/: mod.rs
kernel/src/drivers/input/: mod.rs
kernel/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
kernel/src/syscall/: fs.rs  gui.rs  input.rs  mod.rs  process.rs  sync.rs  thread.rs
kernel/src/task/: context.rs  id.rs  manager.rs  mod.rs  pcb.rs  processor.rs  signal.rs  switch.rs  tcb.rs
kernel/src/trap/: context.rs  mod.rs
os/: Cargo.toml  build.rs  justfile
os/.cargo/: config.toml
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: qemu.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: mod.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs
os/src/task/: context.rs  control_block.rs  id.rs  manager.rs  mod.rs  pcb.rs  pid.rs  process.rs  processor.rs  signal.rs  switch.rs  tcb.rs
os/src/trap/: context.rs  mod.rs  trap.S
tests/: Cargo.toml  justfile
user/: Cargo.toml  justfile
user/src/: console.rs  fs.rs  gui.rs  heap_allocator.rs  input.rs  lang_items.rs  lib.rs  linker.ld  process.rs  signal.rs  sync.rs  syscall.rs  thread.rs
