[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
user_lib = { path = "../user/" }

[lints.rust]
warnings = "deny"

[lints.clippy]
missing_panics_doc = "allow"
similar_names = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"

all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
