[package]
name = "easy-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.21"
spin = "0.9.8"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[lints.clippy]
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"

all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
