[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4.20"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
buddy_system_allocator = "0.9.1"
bitflags = "2.4.2"
xmas-elf = "0.9.1"
easy-fs = { path = "../easy-fs/" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", branch = "rcore-tutorial" } 
volatile = "0.3.0"

[features]
default = ["board_qemu"]
board_qemu = []

[profile.release]
debug = true
