[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4.20"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
buddy_system_allocator = "0.9.1"
bitflags = "2.4.2"
xmas-elf = "0.9.1"
easy-fs = { path = "../easy-fs/" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", branch = "rcore-tutorial" } 
volatile = "0.5.1"
tinybmp = "0.5.0"
embedded-graphics = "0.8.1"

[features]
default = ["board_qemu"]
board_qemu = []

[profile.release]
debug = true

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[lints.clippy]
missing_panics_doc = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"

all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
