[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4.20"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
buddy_system_allocator = "0.9.1"
bitflags = "2.4.2"
xmas-elf = "0.9.1"
