[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
user_lib = { path = "../user/"}
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
missing_panics_doc = "allow"
similar_names = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"

all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
